# xwbots

./: ._pytest_status_out.txt  README.md  README_LONG.md  pyproject.toml  pyproject.xwbots.toml  pytest.ini  requirements.txt  test_output.txt  test_output2.txt
.github/: workflows-config.yaml
.github/workflows/: publish.yml
docs/: GUIDE_01_USAGE.md  INDEX.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_15_API.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_51_TEST.md
docs/logs/reviews/: REVIEW_20260207_PROJECT_STATUS.md
scripts/: ensure_editable_xwchat.py
src/exonware/xwbots/: __init__.py  base.py  config.py  contracts.py  defs.py  errors.py  facade.py  runtime_status_log.py  version.py
src/exonware/xwbots/bots/: __init__.py  agentic_bot.py  command_bot.py  command_transport.py  persona_bot.py  ui_actions.py
src/exonware/xwbots/providers/: __init__.py  console_chat_provider.py
src/exonware_xwbots.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  runner.py  verify_installation.py
tests/0.core/: __init__.py  runner.py  test_core_facade.py  test_core_imports.py
tests/1.unit/: __init__.py  runner.py  test_command_transport.py  test_help_action_merge.py  test_runtime_status_log.py  test_telegram_menu_entries.py
tests/2.integration/: __init__.py  runner.py
tests/3.advance/: __init__.py  runner.py  test_performance.py  test_security.py
